2013-10-18  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm.c (cortexa9_extra_costs): New table.
	(arm_cortex_a9_tune): Use cortexa9_extra_costs.

2013-10-18  Jeff Law  <law@redhat.com>

	* tree-ssa-threadupdate.c: Do not include "tm.h" or "tm_p.h".

	* tree-ssa-threadupdate.c: Include "dbgcnt.h".
	(register_jump_thread): Add "registered_jump_thread" debug counter support.
	* dbgcnt.def (registered_jump_thread): New debug counter.

2013-10-18  Andrew MacLeod  <amacleod@redhat.com>

	* config/rs6000/rs6000.c: Include cgraph.h.

2013-10-18  Teresa Johnson  <tejohnson@google.com>

	* tree-ssa-tail-merge.c (replace_block_by): Update edge
	weights during merging.

2013-10-18  Andrew MacLeod  <amacleod@redhat.com>

	* tree-cfg.h: Rename from tree-flow.h.  Remove #includes.
	* tree-ssa.h: Relocate required #includes from tree-cfg.h.
	* tree-ssa-operands.h: Remove prototype.
	* tree-ssa-operands.c (virtual_operand_p): Move to gimple.c.
	* gimple.c (virtual_operand_p): Relocate from gimple.c.
	* gimple.h: Add prototype.
	* gimple-ssa.h: Include tree-ssa-operands.h.
	* tree-dump.c: Add tree-cfg.h to include list.
	* tree-ssa-alias.c: Add ipa-reference.h to include list.
	* config/alpha/alpha.c: Include gimple-ssa.h instead of tree-flow.h.
	* config/i386/i386.c: Don't include tree-flow.h.
	* config/rs6000/rs6000.c: Likewise.

2013-10-18  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* config/frv/frv.c (frv_init_cumulative_args): Fix wrong cast.

2013-10-18  Richard Biener  <rguenther@suse.de>

	* stor-layout.c (layout_type): Do not change TYPE_PRECISION
	or TYPE_UNSIGNED of integral types.
	(set_min_and_max_values_for_integral_type): Leave TYPE_MIN/MAX_VALUE
	NULL_TREE for zero-precision integral types.

2013-10-18  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/arm_neon.h
	(vcvt<ds>_n_<fsu><32,64>_<fsu><32,64>): Correct argument types.

2013-10-17  Sriraman Tallam  <tmsriram@google.com>

	* opth-gen.awk: Define target_flags_explicit.
